[package]
name = "api_with_iron"
version = "0.1.0"
authors = ["osama530 <samm03422704062>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.7.1"
rustc-serialize = "0.3.24"
chrono = { version = "0.4.11", features = ["rustc-serialize"] }
uuid = { version = "0.2", features = ["rustc-serialize"] }
#uuid = { version = "0.8", features = ["serde", "v4"] }